# restaurant-api

./: Cargo.toml  Makefile  RAPI.postman_collection.json  README.md  swagger.yaml
curl_examples/: delete_meal_item.sh  delete_order.sh  get_meal_item.sh  get_order.sh  post_meal_items.sh  post_order.sh
diagrams/: add_order_sequence_diagram.puml  class.puml  query_meal_item_sequence_diagram.puml  query_order_sequence_diagram.puml  remove_meal_items_sequence_diagram.puml  remove_order_sequence_diagram.puml  worker_sequence_diagram.puml
src/: main.rs
src/handlers/: add_meal_items.rs  add_order.rs  error.rs  mod.rs  query_meal_item.rs  query_order.rs  remove_meal_items.rs  remove_order.rs
src/handlers/tests/: add_meal_items_test.rs  add_order_test.rs  mod.rs  query_meal_item_test.rs  query_order_test.rs  remove_meal_items_test.rs  remove_order_test.rs  thread_pool_mock.rs
src/libraries/: mod.rs  thread_pool.rs  worker.rs
src/libraries/mocks/: mod.rs
src/models/: meal.rs  meal_test.rs  menu.rs  mod.rs  order.rs  order_test.rs  price.rs  price_test.rs
src/repositories/: menu.rs  mod.rs  order.rs  order_test.rs
src/usecases/handlers/: add_meal_items.rs  add_order.rs  mod.rs  query_meal_item.rs  query_order.rs  remove_meal_items.rs  remove_order.rs
src/usecases/handlers/tests/: add_meal_items_test.rs  add_order_test.rs  query_meal_item_test.rs  query_order_test.rs  remove_meal_items_test.rs  remove_order_test.rs
src/usecases/models/: mod.rs  order_resp.rs
